[507338] Java 9 support not well integrated with Tomcat webserver - fix version number
Change-Id: I096b5e16cc12644fe1b1b05cc54213a351e9eb0a